[tool.poetry]
name = "demo-python-prettytable"
version = "0.1.0"
description = ""
authors = ["Natthasath Saksupanara <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_prettytable"}]

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
